@@ -12,7 +12,7 @@ public class ConvertList2ArrayTest {
     @Test
     public void convertListToArray3on3() {
         ConvertList2Array convert = new ConvertList2Array();
-        int[][] result = convert.toArray(Arrays.asList(1, 2, 3, 4, 5, 6, 7), 3);
+        int[][] result = convert.toArray(List.of(1, 2, 3, 4, 5, 6, 7), 3);
         int[][] expect = {
                 {1, 2, 3},
                 {4, 5, 6},
@@ -23,11 +23,11 @@ public class ConvertList2ArrayTest {
     @Test
     public void convertArraysToList() {
         ConvertList2Array integerList = new ConvertList2Array();
-        List<int[]> input = new ArrayList<>();
-        input.add(new int[]{1, 2, 3});
-        input.add(new int[]{4, 5, 6, 7});
+        List<int[]> input = List.of(
+        new int[]{1, 2, 3},
+        new int[]{4, 5, 6, 7});
         List<Integer> result = integerList.converter(input);
-        List<Integer> expected = Arrays.asList(1, 2, 3, 4, 5, 6, 7);
+        List<Integer> expected = List.of(1, 2, 3, 4, 5, 6, 7);
         assertThat(result, is(expected));
 
 
